--- a/happenings/templates/happenings/details.html
+++ b/happenings/templates/happenings/details.html
@@ -1,5 +1,7 @@
-{%  load static %}
+{% extends 'base.html' %}
+{% load static %}
 
+{% block content %}
 {% if happening %}
     <h1>{{ happening.category }}</h1>
     <p><small>{{ happening.happening_created_date }}</small></p>
@@ -10,3 +12,4 @@
 {% else %}
     <p>No happenings are available.</p>
 {% endif %}
+{% endblock %}
