--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     <ul>
       <li><a href="#about">ABOUT US</a></li>
       <li><a href="#listings">LISTINGS</a></li>
-      <li><a href="#omaha">OMAHA HAPPENINGS</a></li>
+      <li><a href="happenings/">OMAHA HAPPENINGS</a></li>
     </ul>
   </nav>
 
