set nullable on listing property of listing_photo object

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <header>
     <div class="header-top">
      <div class="logo">
-  <img src="{% static 'images/ckrealestate_logo.png' %}" alt="CK Real Estate Logo">
+       <a href="/"><img src="{% static 'images/ckrealestate_logo.png' %}" alt="CK Real Estate Logo"></a>
 </div>
         <div class="nav-buttons">
   <button class="contact">CONTACT</button>
@@ -33,6 +33,7 @@
   <nav id="side-menu" class="side-menu">
     <button onclick="toggleMenu()">X MENU</button>
     <ul>
+      <li><a href="/">HOME</a></li>
       <li><a href="/about/">ABOUT US</a></li>
       <li><a href="/listings/">LISTINGS</a></li>
       <li><a href="/happenings/">OMAHA HAPPENINGS</a></li>
