--- a/happenings/templates/happenings/index.html
+++ b/happenings/templates/happenings/index.html
@@ -23,10 +23,11 @@
                          onmouseout="this.style.transform='scale(1)'"
                     >
                         <a href="/happenings/{{ happening.happening_id }}/" style="text-decoration: none; color: inherit;">
+                            {% if happening.url %}
                             <img src="{{ happening.photo.url }}"
                                  alt="Image"
                                  style="width: 100%; height: 150px; object-fit: cover; border-radius: 4px;">
-
+                            {% endif %}
                             <div style="margin-top: 0.75em;">
                                 <div style="font-weight: bold; font-size: 1.1em; margin-bottom: 0.25em;">
                                     {{ happening.title }}
