Updated nav bar for admin with POST for logout to redirect to home

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -275,4 +275,16 @@ footer {
   .nav-buttons button:hover {
     background-color: #8DA638;
   }
+
+  .login-button {
+    background: none;
+    border: none;
+    color: #007bff;
+    text-decoration: underline;
+    cursor: pointer;
+    font: inherit;
+    padding: 0;
+  }
+
 }
+
