--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -279,12 +279,13 @@ footer {
   .login-button {
     background: none;
     border: none;
-    color: #007bff;
-    text-decoration: underline;
     cursor: pointer;
     font: inherit;
     padding: 0;
   }
 
+   .login-button button:hover {
+    background-color: #8DA638;
+  }
 }
 
