--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,7 +43,8 @@ body {
   padding: 0.6em 1.4em;
   border: none;
   border-radius: 4px;
-  background-color: #4a90e2;
+  background-color: #556574;
+  font-family: "barlow-semi-condensed", sans-serif;
   color: white;
   font-size: 1em;
   cursor: pointer;
@@ -51,7 +52,7 @@ body {
 }
 
 .nav-buttons button:hover {
-  background-color: #3a78c2;
+  background-color: #8DA638;
 }
 
 /* Hero Section */
@@ -135,41 +136,45 @@ footer {
 /* Side Menu */
 
 .menu-toggle {
-  width: 28px;
-  height: 22px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 0.6em 1.2em;
+  border: none;
+  background-color: #556574;
+  color: white;
+  font-family: "barlow-semi-condensed", sans-serif;
+  font-size: 1em;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.menu-toggle:hover {
+  background-color: #8DA638;
+}
+
+.menu-toggle .hamburger {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  cursor: pointer;
-  padding: 4px;
+  height: 16px;
+  width: 20px;
 }
 
-.menu-toggle span {
-  display: block;
-  height: 3px;
+.menu-toggle .hamburger span {
+  height: 2px;
   width: 100%;
-  background-color: #333;
-  border-radius: 2px;
-  transition: all 0.3s ease-in-out;
-}
-
-/* Animate into X when menu is open */
-.menu-toggle.active span:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
-}
-
-.menu-toggle.active span:nth-child(2) {
-  opacity: 0;
-}
-
-.menu-toggle.active span:nth-child(3) {
-  transform: rotate(-45deg) translate(5px, -5px);
+  background-color: white;
+  border-radius: 1px;
+  transition: all 0.3s ease;
 }
 
 .side-menu {
   position: fixed;
+  font-family: "barlow-semi-condensed", sans-serif;
   top: 0;
-  right: -300px; /* hidden by default */
+  right: -300px;
   width: 280px;
   height: 100%;
   background-color: white;
@@ -182,6 +187,7 @@ footer {
 .side-menu button {
   background: none;
   border: none;
+  font-family: "barlow-semi-condensed", sans-serif;
   font-size: 1.2em;
   font-weight: bold;
   color: #333;
@@ -198,6 +204,7 @@ footer {
 .side-menu ul {
   list-style: none;
   padding: 1em 0;
+  font-family: "barlow-semi-condensed", sans-serif;
 }
 
 .side-menu li a {
@@ -208,10 +215,11 @@ footer {
   font-size: 1.05em;
   border-bottom: 1px solid #eaeaea;
   transition: color 0.3s;
+  font-family: "barlow-semi-condensed", sans-serif;
 }
 
 .side-menu li a:hover {
-  color: #4a90e2;
+  color: #8DA638;
 }
 
 /* Responsive */
@@ -233,7 +241,14 @@ footer {
 
   .nav-buttons button {
     width: 100%;
+    background-color: #556574;
   }
+
+  .nav-buttons button:hover {
+    background-color: #8DA638;
+  }
+
+
 
   .contact-info {
     flex-direction: column;
@@ -398,7 +413,7 @@ body {
 }
 
 .contact-row .value a {
-  color #8DA638;
+  color: #8DA638;
 }
 
 .contact-row .value a:hover {
