finalized about us page.

--- a/contact/templates/contact/aboutus.html
+++ b/contact/templates/contact/aboutus.html
@@ -35,7 +35,7 @@
                     <div class="label">Phone:</div>
                     <div class="value">
                         <a href="tel:4021234567">402-123-4567</a><br>
-                        <a href="#">Visit My Website</a>
+                        <a href="https://www.linkedin.com/in/carlos-kosala-43608b363/">Visit My Website</a>
                     </div>
                 </div>
             </div>
