--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -286,12 +286,12 @@ body {
 /* --- Contact Info Header --- */
 .info h3 {
   font-weight: 600;
-  font-size: clamp(1.5rem, 4vw, 3rem);
+  font-size: 50px;
   color: #556574;
   text-transform: uppercase;
-  margin-bottom: 1rem;
-  padding-top: 5vh;
-  padding-left: 5vw;
+  margin-bottom: 20px;
+  padding-top: 80px;
+  padding-left: 100px;
   white-space: nowrap;
 }
 
@@ -444,7 +444,7 @@ body {
 .bio {
   max-width: 1500px;
   margin: 40px auto;
-  padding: 0 clamp(2rem, 5vw, 8rem);
+  padding: 0 20px;
 }
 
 /* --- Form Section --- */
