--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -63,10 +63,11 @@ body {
 }
 
 h1 {
+  font-weight: 100;
+  font-size: 60px;
+  color: #8DA638;
   text-align: center;
-  font-size: 2.25em;
-  margin: 1em 0 0.2em;
-  color: #2c3e50;
+  margin: 60px 0 40px 0;
 }
 
 .subhead {
@@ -277,7 +278,7 @@ body {
 /* --- Main Heading --- */
 .about-title {
   font-weight: 100;
-  font-size: 70px;
+  font-size: 60px;
   color: #8DA638;
   text-align: center;
   margin: 60px 0 40px 0;
@@ -508,5 +509,8 @@ body {
   color: #4CAF50; /* Nice green color on hover */
   text-decoration: underline;
 }
+
+
+
 
 }
