--- a/listings/templates/listings/details.html
+++ b/listings/templates/listings/details.html
@@ -20,7 +20,7 @@
                  {% if photo %}
                     {% if photo.photo_url %}
                         {% if photo.photo_url.url %}
-                            <img src="{% static 'images/no-photo.jpg' %}" alt="No Property Photo Available"
+                            <img src="{{ photo.photo_url.url }}"
                                  class="carousel-image"
                                  style="display: {% if forloop.first %}block{% else %}none{% endif %}; max-height: 100%; max-width: 100%; object-fit: contain; border-radius: 10px;">
                         {% else %}
@@ -38,6 +38,12 @@
                                  class="carousel-image"
                                  style="display: {% if forloop.first %}block{% else %}none{% endif %}; max-height: 100%; max-width: 100%; object-fit: contain; border-radius: 10px;">
                 {% endif %}
+
+
+
+            <img src="{{ photo.photo_url.url }}"
+                 class="carousel-image"
+                 style="display: {% if forloop.first %}block{% else %}none{% endif %}; max-height: 100%; max-width: 100%; object-fit: contain; border-radius: 10px;">
             {% endfor %}
 
             <!-- Left/Right arrows -->
