--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -76,7 +76,7 @@
       color: #2c3e50;
     }
     .hero-image {
-        witdh: 100%;
+        width: 100%;
         max-height: 600px;
         object-fit: cover;
         display: block;
