--- a/listings/templates/listings/listings.html
+++ b/listings/templates/listings/listings.html
@@ -60,8 +60,7 @@
         margin-bottom: 20px;
         color: #33475b;
         text-transform: uppercase;
-        letter-spacing: 1px;
-    ">
+        letter-spacing: 1px;">
         Results
     </h2>
 
