--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,9 @@
     {% if request.user.is_superuser %}
       <li><a href="/admin/">SITE ADMINISTRATION</a></li>
     {% endif %}
+    {% if user.is_authenticated and user.is_staff %}
+    <li><a href="{% url 'reports_home' %}">REPORTS</a></li>
+{% endif %}
     <li>
       <form id="logout-form" action="{% url 'logout' %}" method="post" style="display:inline;">
         {% csrf_token %}
