fixed the double click to advance photo

--- a/listings/templates/listings/details.html
+++ b/listings/templates/listings/details.html
@@ -41,9 +41,9 @@
 
 
 
-            <img src="{{ photo.photo_url.url }}"
-                 class="carousel-image"
-                 style="display: {% if forloop.first %}block{% else %}none{% endif %}; max-height: 100%; max-width: 100%; object-fit: contain; border-radius: 10px;">
+{#            <img src="{{ photo.photo_url.url }}"#}
+{#                 class="carousel-image"#}
+{#                 style="display: {% if forloop.first %}block{% else %}none{% endif %}; max-height: 100%; max-width: 100%; object-fit: contain; border-radius: 10px;">#}
             {% endfor %}
 
             <!-- Left/Right arrows -->
