Added email to aboutus page

--- a/contact/templates/contact/aboutus.html
+++ b/contact/templates/contact/aboutus.html
@@ -32,6 +32,14 @@
                 </div>
 
                 <div class="contact-row">
+                    <div class="label">Email:</div>
+                    <div class="value">
+                        ckRealEstateOmaha@gmail.com
+                    </div>
+                </div>
+
+
+                <div class="contact-row">
                     <div class="label">Phone:</div>
                     <div class="value">
                         <a href="tel:4021234567">402-123-4567</a><br>
